[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/imgs/$euphus_young_fly.png" type="Texture" id=1]
[ext_resource path="res://resources/shaders/pixel_outline.shader" type="Shader" id=2]
[ext_resource path="res://resources/imgs/bird_idle.png" type="Texture" id=3]
[ext_resource path="res://objects/Bird.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/width = 1.0
shader_param/outline_color = null

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 2 )
shader_param/width = 1.0
shader_param/outline_color = null

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.04657, 3.51844 )

[sub_resource type="CircleShape2D" id=3]
radius = 106.776

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}

[node name="Bird" type="KinematicBody2D"]
z_index = 11
collision_layer = 32
collision_mask = 32
script = ExtResource( 4 )

[node name="Idle" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
hframes = 4
frame = 1

[node name="Sprite" type="Sprite" parent="."]
visible = false
material = SubResource( 8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 3
vframes = 4
frame = 9
region_rect = Rect2( 0, 0, 144, 192 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.132584, 1.90034 )
shape = SubResource( 2 )

[node name="FoodDetecter" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FoodDetecter"]
visible = false
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/move_down = SubResource( 4 )
anims/move_left = SubResource( 5 )
anims/move_right = SubResource( 6 )
anims/move_top = SubResource( 7 )

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="FoodDetecter" to="." method="_on_FoodDetecter_area_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
